Refactor test con DisplayName y mensajes en assert